# t2p

./: .gitignore  CHANGELOG.rst  LICENSE  Makefile  README.rst  config.ini.sample  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  tox.ini
docs/source/: conf.py  index.rst  plugin_search_in_telethon.py
docs/source/modules/: t2p.rst  t2p_tasks.rst
t2p/: __init__.py  logger.py  processor.py  version.py
t2p/tasks/: dump_messages.py  read_text_messages.py  search_nearby_ones.py  send_voice_notes.py  task.py
tests/: test_dump_messages.py  test_processor.py
