[metadata]
name = t2p
author = David Waster
author_email = wasterdavid@gmail.com
version = 0.1.2
description = Telegram Tasks Processor.
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
keywords =
    tasks
    telegram
    cli
license = MIT
license_files = LICENSE
platforms = any
url = https://github.com/David256/t2p

[options]
packages = t2p, t2p.tasks
install_requires = Telethon>=1.22.*
scripts = bin/t2p
